Create seed and render json data

--- a/nba_sticker_album/Gemfile
+++ b/nba_sticker_album/Gemfile
@@ -28,7 +28,9 @@ gem 'bcrypt', '~> 3.1.7'
 # For token authentification
 gem 'jwt' 
 # Create authentification service
-gem 'simple_command' 
+gem 'simple_command'
+# Serialization
+gem 'active_model_serializers', '~> 0.8.3' 
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
